--- a/my-portfolio/public/404.html
+++ b/my-portfolio/public/404.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=/index.html">
-  <link rel="canonical" href="/index.html">
+  <meta http-equiv="refresh" content="0; url=/">
+  <link rel="canonical" href="/">
 </head>
 <body></body>
 </html>
